# aside

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json
.github/workflows/: prepare-release.yml  release.yml
.husky/: pre-commit
Aside/: AppIcon.icns  Package.resolved  Package.swift  generate_icon.swift  watch.sh
Aside/Aside.app/Contents/: Info.plist
Aside/Sources/Aside/: AsideApp.swift  CLIDispatcher.swift  ContentView.swift  ContextCapture.swift  CustomWordsManager.swift  HotkeyManager.swift  Info.plist  (+12 more)
homebrew/: aside.rb  setup-tap.sh  voice-assistant.rb
raycast-extension/: README.md  package.json  tsconfig.json
raycast-extension/src/: context.ts  dispatch.tsx  opencode.ts  sessions.tsx  vocabulary-list.tsx  vocabulary.ts
scripts/: download-model.sh  release.sh
skills/aside/: SKILL.md
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  context.rs  lib.rs  main.rs  transcribe.rs
src-tauri/swift-lib/: Package.swift
src-tauri/swift-lib/Sources/: SpeechBridge.swift
src/components/: OverlayWindow.tsx  SessionPicker.tsx  SetupScreen.tsx  StatusBadge.tsx  TranscriptionBox.tsx  Waveform.tsx
src/context/: AppContext.tsx  appReducer.ts  types.ts
src/hooks/: useActiveContext.ts  useAudioStream.ts  useHotkey.ts  useOverlayKeyboard.ts  useSessions.ts  useTranscription.ts
src/services/: activationSound.ts  cliService.ts  promptBuilder.ts
(+33 files in other folders)
