[package]
name = "aside"
version = "0.1.0"
edition = "2021"

[lib]
name = "aside_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = { version = "1.0.7", features = ["build"] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
# tauri-plugin-global-shortcut = "2"  # replaced by CGEvent tap for right-Option key
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
parakeet-rs = { version = "0.3", optional = true }
parking_lot = "0.12"
swift-rs = "1.0.7"
log = "0.4"
log4rs = "1.4.0"
dirs-next = "2.0.0"

[features]
default = ["parakeet"]
parakeet = ["dep:parakeet-rs"]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
[profile.dev.package.parakeet-rs]
opt-level = 3
